--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,14 +1,14 @@
 import = [
-	"~/.config/alacritty/themes/themes/tokyo_night_enhanced.toml"
+	"~/.config/alacritty/themes/themes/tokyo_night.toml"
 ]
 
 [window]
-padding = { x = 9, y = 7}
+padding = { x = 7, y = 7}
 decorations = "None"
 opacity = 0.8
 
 [scrolling]
-history = 50000
+history = 86243
 
 [font]
 normal = { family = "BlexMono Nerd Font Mono", style = "SemiBold"}
@@ -16,3 +16,11 @@ size = 12
 
 [colors]
 draw_bold_text_with_bright_colors = true
+
+[selection]
+save_to_clipboard = true
+
+[keyboard]
+bindings = [
+	{ key = "N", mods = "Control|Shift", action = "CreateNewWindow" },
+]
