--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule ".config/zsh"]
 	path = .config/zsh
 	url = git@github.com:aretrosen/zsh.git
+	branch = debian
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = git@github.com:aretrosen/nvim.git
