feat: added kitty as primary terminal

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 # Set alacritty as default terminal for true colors
-set -sg default-terminal "alacritty" 
-set -asg terminal-overrides ",alacritty*:Tc" 
+# set -sg default-terminal "alacritty" 
+# set -asg terminal-overrides ",alacritty*:Tc" 
+set -sg default-terminal "kitty" 
+set -asg terminal-overrides ",kitty*:Tc" 
 
 # Fix ESC delay on vim
 set -sg escape-time 5
@@ -89,16 +91,15 @@ set -wg pane-active-border-style fg='#737aa2'
 set -wg pane-border-style "#{?pane_synchronized,#[fg=#737aa2],#[fg=#292e42]}"
 set -wg pane-border-lines heavy
 
-set -g status-left "#[fg=#3b4261,bold]#{?client_prefix,#[bg=#e0af68],#[bg=#9ece6a]}  #S #[bg=default]#{?client_prefix,#[fg=#e0af68],#[fg=#9ece6a]}#[none]"
+set -g status-left "#[fg=#3b4261,bold]#{?client_prefix,#[bg=#e0af68],#[bg=#9ece6a]} #S #[bg=default]#{?client_prefix,#[fg=#e0af68],#[fg=#9ece6a]}#[none]"
 
 set -wg window-status-format "#[bg=default,fg=#737aa2]#[bg=#737aa2,fg=#ffffff]#I#[bg=#545c7e,fg=#737aa2]#[none]"
-set -awg window-status-format "#[fg=#ffffff] #{?window_zoomed_flag,,} #W #[bg=default,fg=#545c7e]#[none]"
+set -awg window-status-format "#[fg=#ffffff] #W #{?window_zoomed_flag,,} #[bg=default,fg=#545c7e]#[none]"
 
 set -wg window-status-current-format "#[bg=default,fg=#bb9af7]#[bg=#bb9af7,fg=#ffffff]#I#[bg=#9d7cd8,fg=#bb9af7]#[none]"
-set -awg window-status-current-format "#[fg=#ffffff] #{?window_zoomed_flag,,} #W #{?pane_synchronized,✵,}#[bg=default,fg=#9d7cd8]#[none]"
+set -awg window-status-current-format "#[fg=#ffffff] #W #{?window_zoomed_flag,,} #{?pane_synchronized,✵,}#[bg=default,fg=#9d7cd8]#[none]"
 
-set -g status-right "#[fg=#3d59a1,bg=default]#[fg=#ffffff,bg=#3d59a1]  #[fg=#394b70,bg=#3d59a1]#[none]"
-set -ag status-right "#[fg=#ffffff,bg=#394b70] %Y/%m/%d %I:%M:%S %p #[fg=#394b70,bg=default]#[none]"
+set -g status-right "#[fg=#394b70,bg=default]#[fg=#ffffff,bg=#394b70] %a %Y/%m/%d %I:%M:%S %p %Z #[fg=#394b70,bg=default]#[none]"
 set -ag status-right "#[fg=#3d59a1,bg=default]#[fg=#ffffff,bg=#3d59a1] #h #[none]"
 
 set -wg window-status-separator ''
