fix: fixed tmux key bindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,6 +7,9 @@ set -asg terminal-overrides ",kitty*:Tc"
 # Fix ESC delay on vim
 set -sg escape-time 5
 
+# Don't update status that frequently
+set -g status-interval 60
+
 # Set 12 hour clock mode style
 set -wg clock-mode-style 12
 
@@ -21,6 +24,9 @@ set -g base-index 1
 set -wg pane-base-index 1
 set -g renumber-windows on
 
+# Set tmux history file
+set -sg history-file "~/.config/tmux/.thistory"
+
 # Set clipboard
 set -sg set-clipboard external
 
@@ -34,47 +40,90 @@ set -g allow-rename off
 set -wg monitor-activity on
 set -g visual-activity on
 
+# Rounded border lines
+set -wg popup-border-lines rounded
+set -wg menu-border-lines rounded
+
+# Unbind some default key tables
+# Unbind the copy-mode and prefix key tables
+unbind -T copy-mode -aq
+unbind -T prefix -aq
+
 # Use better prefix bindings
-unbind C-b
 set -g prefix C-Space
-bind C-Space send-prefix
+bind -N 'Send the prefix key' C-Space send-prefix
 
-# Better split keybinds
-unbind '"'
-unbind %
-bind '\' split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# Default keybindings I already liked
+bind -N 'Detach the current client' d detach-client
+bind -N 'List keys bindings with notes' ? list-keys -N
+bind -N 'Prompt for a command' : command-prompt
+bind -N 'Show a clock' t clock-mode
+bind -N 'Select window 1' 1 select-window -t :=1
+bind -N 'Select window 2' 2 select-window -t :=2
+bind -N 'Select window 3' 3 select-window -t :=3
+bind -N 'Select window 4' 4 select-window -t :=4
+bind -N 'Select window 5' 5 select-window -t :=5
+bind -N 'Select window 6' 6 select-window -t :=6
+bind -N 'Select window 7' 7 select-window -t :=7
+bind -N 'Select window 8' 8 select-window -t :=8
+bind -N 'Select window 9' 9 select-window -t :=9
+bind -N 'Zoom the active pane' z resize-pane -Z
+bind -N 'Select the next window'     n next-window
+bind -N 'Select the previous window' p previous-window
+bind -N 'Choose a session from a tree' s choose-tree -Zs
+bind -N 'Choose a window from a tree'  w choose-tree -Zw
+bind -N 'Switch to the last client'  L switch-client -l
+bind -N 'Enter copy mode' [ copy-mode
+bind -N 'Paste from the ' ] paste-buffer -p
+bind -N 'Switch to the last pane' \; last-pane
+bind -N 'Choose a paste buffer' = choose-buffer -Z
 
-# Better navigation and resizing
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+# Slightly modified command keybindings
+bind -N 'Choose a pane' q display-panes -d 2000
+bind -N 'Create a new window' c new-window -c "#{pane_current_path}"
+bind -N 'Search for a pane' f command-prompt 'find-window -rCNT "%%"'
 
-bind -r Left resize-pane -L 2
-bind -r Down resize-pane -D 2
-bind -r Up resize-pane -U 2
-bind -r Right resize-pane -R 2
-
-# Go to last window, removed it before while binding l
-# Now I cannot change layouts, but I don't know what that is anyways
-bind Space last-window
+# Different or new keybindings from vanilla tmux
+bind -N 'Break current pane to a new window' "'" break-pane
+bind -N 'Join current pane to a new window' '"' choose-window 'join-pane -s "%%"'
+bind -N 'Choose a client from a tree'  C choose-client -Z
+bind -N 'Rename current session' S command-prompt -I "#S" { rename-session "%%" }
+bind -N 'Rename current window' W command-prompt -I "#W" { rename-window "%%" }
+bind -N 'Select main-horizontal layout' | select-layout main-vertical
+bind -N 'Rotate main-vertical layout' _ select-layout main-horizontal
+bind -N 'Split window vertically' '\' split-window -h -c "#{pane_current_path}"
+bind -N 'Split window horizontally' - split-window -v -c "#{pane_current_path}"
+bind -N 'Select the last window' Space last-window
+bind -r -N 'Select the pane to the left of the active pane (repeatable)'  h select-pane -L
+bind -r -N 'Select the pane below the active pane (repeatable)'           j select-pane -D 
+bind -r -N 'Select the pane above the active pane (repeatable)'           k select-pane -U
+bind -r -N 'Select the pane to the right of the active pane (repeatable)' l select-pane -R
+bind -r -N 'Resize the pane left by 3'  Left  resize-pane -L 3
+bind -r -N 'Resize the pane down by 3'  Down  resize-pane -D 3
+bind -r -N 'Resize the pane up by 3'    Up    resize-pane -U 3
+bind -r -N 'Resize the pane right by 3' Right resize-pane -R 3
+bind -r -N 'Rotate through the panes' -n M-r rotate-window -U
 
 # Quickly swap windows
-bind -r < swap-window -d -t -1
-bind -r > swap-window -d -t +1
+bind -r -N 'Swap window with the left one' < swap-window -d -t -1
+bind -r -N 'Swap window with the right one' > swap-window -d -t +1
 
-# When creating a new window, keep current path
-bind c new-window -c "#{pane_current_path}"
-
-# Search for pane/window with regex
-bind f command-prompt "find-window -rCNT '%%'"
+# Open the scratch session fast
+bind -N 'Toggle scratch session in a popup' -n M-s popup -w 80% -h 80% -E "tmux has -t scratch &>/dev/null || { tmux new -ds scratch && tmux set -st scratch key-table popup-scratch }; tmux attach -t scratch"
+bind -T popup-scratch M-s detach
 
 # Sane bindings for copy mode
 # It WILL copy to clipboard. No use of copy-pipe with external clipboard
 # Also, I don't clear selection. Better to explicitly cancel with q.
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -T copy-mode-vi C-v {
+	%if #{==:#{rectangle_toggle},1}
+		send-keys -X stop-selection
+	%else
+		send-keys -X begin-selection
+	%endif
+	send-keys -X rectangle-toggle
+}
 bind -T copy-mode-vi y send-keys -X copy-selection-no-clear
 
 # Tmux statusbar
@@ -99,7 +148,7 @@ set -awg window-status-format "#[fg=#ffffff] #W #{?window_zoomed_flag,,} #[bg
 set -wg window-status-current-format "#[bg=default,fg=#bb9af7]#[bg=#bb9af7,fg=#ffffff]#I#[bg=#9d7cd8,fg=#bb9af7]#[none]"
 set -awg window-status-current-format "#[fg=#ffffff] #W #{?window_zoomed_flag,,} #{?pane_synchronized,✵,}#[bg=default,fg=#9d7cd8]#[none]"
 
-set -g status-right "#[fg=#394b70,bg=default]#[fg=#ffffff,bg=#394b70] %a %Y/%m/%d %I:%M:%S %p %Z #[fg=#394b70,bg=default]#[none]"
+set -g status-right "#[fg=#394b70,bg=default]#[fg=#ffffff,bg=#394b70] %a %Y/%m/%d %I:%M %p %Z #[fg=#394b70,bg=default]#[none]"
 set -ag status-right "#[fg=#3d59a1,bg=default]#[fg=#ffffff,bg=#3d59a1] #h #[none]"
 
 set -wg window-status-separator ''
