feat: i don't even remember the things I changed

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -159,6 +159,10 @@ background_opacity 0.85
 #: Choices: write-clipboard, read-clipboard, write-primary, read-primary, read-clipboard-ask, read-primary-ask
 clipboard_control write-clipboard write-primary read-clipboard read-primary
 
+#: Enable shell integration
+#: Choices to disable specific integrations: no-rc, no-cursor, no-title, no-cwd, no-prompt-mark, no-complete, no-sudo
+shell_integration disabled
+
 #: Choose between wauland, X11, or auto server
 linux_display_server wayland
 
