--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,6 @@
-# Set alacritty as default terminal for true colors
-# set -sg default-terminal "alacritty" 
-# set -asg terminal-overrides ",alacritty*:Tc" 
-set -sg default-terminal "kitty" 
-set -asg terminal-overrides ",kitty*:Tc" 
+# Set proper terminal overrides for true color support
+set -asg terminal-overrides ",xterm-kitty*:Tc"
+set -asg terminal-overrides ",alacritty*:Tc"
 
 # Fix ESC delay on vim
 set -sg escape-time 5
