--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,5 @@
 # Set proper terminal overrides for true color support
 set -asg terminal-overrides ",xterm-kitty*:Tc"
-set -asg terminal-overrides ",alacritty*:Tc"
 
 # Fix ESC delay on vim
 set -sg escape-time 5
@@ -24,6 +23,9 @@ set -g renumber-windows on
 
 # Set tmux history file
 set -sg history-file "~/.config/tmux/.thistory"
+
+# Request focus events from terminal if available
+set -sg focus-events on
 
 # Set clipboard
 set -sg set-clipboard external
