--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -132,7 +132,7 @@ window_padding_width 2 4
 
 #: Hide window decorations
 #: Choices: titlebar-only and titlebar-and-corners, or yes/no
-hide_window_decorations yes
+hide_window_decorations no
 
 #: NOTE: There are implementation for tabs and windows. JUST USE TMUX. PLEASE.
 
@@ -170,7 +170,7 @@ linux_display_server wayland
 wayland_enable_ime no
 
 #: Include the colorscheme
-include ./Tokyo Night.conf
+include ./Everforest Light Soft.conf
 
 #: Include key maps
 include ./KeyMouseMaps.conf
